--- a/woosin/src/main/resources/templates/woosinIntroduce4.html
+++ b/woosin/src/main/resources/templates/woosinIntroduce4.html
@@ -205,16 +205,17 @@ body {
 		</header>
 
 	<!-- Nav -->
-		<nav id="menu">
-			<ul class="links">
-				<li><a href="index">Home</a></li>
-				<li><a href="woosinIntroduce">회사소개</a></li>
-				<li><a href="registrationWoosin">인증/보유</a></li>
-				<li><a href="coperrationWoosin">주요사업내용/실적</a></li>
-				<li><a href="elements.html">주요실적</a></li>
-				<li><a href="elements.html">커뮤니티</a></li>
-			</ul>
-		</nav>
+			<nav id="menu">
+				<ul class="links">
+					<li><a href="index">Home</a></li>
+					<li><a href="woosinIntroduce">회사소개</a></li>
+					<li><a href="woosinCompuny">주요사업 내용</a></li>
+					<li><a href="coperrationWoosin">주요실적</a></li>
+					<li><a href="elements.html">공사이미지</a></li>
+					<li><a href="registrationWoosin">인증/보유</a></li>
+					<li><a href="Community">커뮤니티</a></li>
+				</ul>
+			</nav>
 	
 		<!-- Two -->
 			<section id="two" class="wrapper style3">
