--- a/woosin/src/main/resources/templates/Community.html
+++ b/woosin/src/main/resources/templates/Community.html
@@ -12,7 +12,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
-
 <style>
 th,td{
 font-family: "Nanum Gothic", sans-serif;
@@ -40,7 +39,7 @@ font-weight: bold ;
   background-color: #ddd;
   color: black;
 }
- p,h3,li,a{
+ p,h3,li,a,label{
       font-family: "Nanum Gothic", sans-serif;
       font-size: 22px;
 }
@@ -98,7 +97,7 @@ button:hover:before,button:hover:after{
 					<li><a href="coperrationWoosin">주요실적</a></li>
 					<li><a href="elements.html">공사이미지</a></li>
 					<li><a href="registrationWoosin">인증/보유</a></li>
-					<li><a href="Community">커뮤니티</a></li>
+					<li><a href="elements.html">커뮤니티</a></li>
 				</ul>
 			</nav>
 	<!-- Two -->
@@ -148,48 +147,56 @@ button:hover:before,button:hover:after{
 		  <a href="#"></a>
 		  <a href="#"></a>
 		  <a href="#"></a>
-
-		  <button onclick = "location.href = '/coperrationWoosin3'">주요 사업 내용</button>
-		  <button onclick = "location.href = '/coperrationWoosin'">관급및 민간공사</button>
-		  <button onclick = "location.href = '/coperrationWoosin2'">공장및 물류센터</button>	
+		   <a href="#"></a>
+		  <a href="#"></a>
+		  <a href="#"></a>
+		  <a href="#"></a>
+		  <button onclick = "location.href = '/Community3'">공지사항</button>
+		  <button onclick = "location.href = '/Community2'">상담실</button>
+		  <button onclick = "location.href = '/Community'">1:1 문의하기</button>	
 		  <br>
 		  <br>
 
 		</div>
-			<div class="box">
-				<div class="image fit">
-					<img src="images/702.jpg" height="400" alt="" />
+		<!-- Footer -->
+		<footer id="footer" class="wrapper">
+			<div class="inner">
+				<section>
+					<div class="box">
+						<div class="image fit">
+							<img src="images/904.jpg" height="400" alt="" />
+								</div>
+							<div class="content">
+								<h2 class="align-center">문의하기</h2>
+								<hr />
+								<form action="/addCommunity" method="post">
+									<div class="field half first">
+										<label for="name">성함</label>
+										<input name="name" id="name" type="text" placeholder="Name">
+									</div>
+									<div class="field half">
+										<label for="email">Email</label>
+										<input name="email" id="email" type="email" placeholder="Email">
+									</div>
+									<div class="field">
+										<label for="dept">제목</label>
+										<input name="dept" id="dept" type="text" placeholder="dept">
+									</div>
+									<div class="field">
+										<label for="message">내용</label>
+										<textarea name="message" id="message" rows="6" placeholder="답변은 빠른시일 안에 메일로 송신됩니다."></textarea>
+									</div>
+									
+									<ul class="actions align-center">
+										<li><input value="확인" class="button special" type="submit"></li>
+									</ul>
+								</form>
+							</div>
+						</div>
+					</section>	
 				</div>
-				<div class="content">
-					<header class="align-center">
-						<h2>실적 내용</h2>
-					</header>
-					<hr />	 	
-				  	 	
-				  	 	<table>
-				  	 	<h3>관급및 민간공사</h3>
-						  <tr>
-						    <th align="center">번호</th>
-						    <th align="center">발주처</th>
-						    <th align="center">공사명</th>
-						    <th align="center">공사기간</th>
-						    <th align="center">도급금액</th>
-						  </tr>
-						  
-							  <tr th:each="str:${map.list}">
-							    <td th:text="${str.corperrationNo}" style="color: black;">corperrationNo</td>
-							    <td th:text="${str.corperrationPlace}" style="color: black;">corperrationPlace</td>
-							    <td th:text="${str.corperrationName}" style="color: black;">corperrationName</td>
-							    <td th:text="${str.corperrationDate}" style="color: black;">corperrationDate</td>
-							    <td th:text="${str.corperrationPrice}" style="color: black;">corperrationPrice</td>
-							  </tr>
-						  
-						</table>
-				    </div>
-				    <a th:if="${map.currentPage > 1}" th:href="@{/coperrationWoosin?(currentPage=${map.currentPage-1})}">이전</a>
-				    <a th:if="${map.currentPage < map.lastPage}" th:href="@{/coperrationWoosin?(currentPage=${map.currentPage+1})}">다음</a>
-					</div>
-			</div>
+			</footer>
+		</div>
 	</section>
 	
 
