--- a/woosin/src/main/resources/templates/coperrationWoosin2.html
+++ b/woosin/src/main/resources/templates/coperrationWoosin2.html
@@ -93,10 +93,11 @@ button:hover:before,button:hover:after{
 				<ul class="links">
 					<li><a href="index">Home</a></li>
 					<li><a href="woosinIntroduce">회사소개</a></li>
+					<li><a href="woosinCompuny">주요사업 내용</a></li>
+					<li><a href="coperrationWoosin">주요실적</a></li>
+					<li><a href="elements.html">공사이미지</a></li>
 					<li><a href="registrationWoosin">인증/보유</a></li>
-					<li><a href="coperrationWoosin">주요사업내용/실적</a></li>
-					<li><a href="elements.html">주요실적</a></li>
-					<li><a href="elements.html">커뮤니티</a></li>
+					<li><a href="Community">커뮤니티</a></li>
 				</ul>
 			</nav>
 	<!-- Two -->
