--- a/woosin/src/main/resources/templates/index.html
+++ b/woosin/src/main/resources/templates/index.html
@@ -41,11 +41,11 @@
 				<ul class="links">
 					<li><a href="index">Home</a></li>
 					<li><a href="woosinIntroduce">회사소개</a></li>
+					<li><a href="woosinCompuny">주요사업 내용</a></li>
+					<li><a href="coperrationWoosin">주요실적</a></li>
+					<li><a href="elements.html">공사이미지</a></li>
 					<li><a href="registrationWoosin">인증/보유</a></li>
-					<li><a href="coperrationWoosin">주요사업내용/실적</a></li>
-					<li><a href="elements.html">주요실적</a></li>
-					<li><a href="elements.html">커뮤니티</a></li>
-					
+					<li><a href="Community">커뮤니티</a></li>
 				</ul>
 			</nav>
 
@@ -73,6 +73,7 @@
 							<div class="content">
 								<header class="align-center">
 								<h3> 2020-01-03 카피라이트 변경, 연혁 타임라인 데이터베이스기반 기능 구현, css변경, 서버 카카오맵 키값추가</h3>
+								<h3> 2020-01-04 배경변경 adminIndex추가 연혁/타임라인 리스트 출력 구현, 공장,연혁,민간 추가기능 구현 ,전체적 css 변경</h3>
 									<h2>대표 서비스</h2>
 									<p>Main Service</p>
 								</header>
