--- a/woosin/src/main/resources/templates/woosinCompuny2.html
+++ b/woosin/src/main/resources/templates/woosinCompuny2.html
@@ -36,9 +36,13 @@
   background-color: #ddd;
   color: black;
 }
- p,h3,li,a{
+ p,h3,li,a,th,td{
       font-family: "Nanum Gothic", sans-serif;
       font-size: 22px;
+
+}
+p{
+	color: black;
 }
 button{
   background:#1AAB8A;
@@ -137,7 +141,7 @@ button:hover:before,button:hover:after{
 			</section>	
 	
 	<!-- One -->
-		<section id="one" class="wrapper style2">
+		<section id="one" class="wrapper style2" style="background-color: #E4E4E4">
 			<div class="inner">
 			
 				<div class="topnav">
@@ -148,37 +152,32 @@ button:hover:before,button:hover:after{
 				  <a href="#"></a>
 				  <a href="#"></a>
 				  <a href="#"></a>
-				  <button onclick = "location.href = '/woosinIntroduce'">인사말씀</button>
-				  <button onclick = "location.href = '/woosinIntroduce2'">업무흐름표</button>
-				  <button onclick = "location.href = '/woosinIntroduce4'">연혁/타임라인</button>				  
-				  <button onclick = "location.href = '/woosinIntroduce3'">오시는길</button>
+				  <a href="#"></a>
+				  <a href="#"></a>
+				  <a href="#"></a>
+				  <a href="#"></a>
+				  <a href="#"></a>
+				  <button onclick = "location.href = '/woosinCompuny'">건설/컨설팅 부문</button>
+				  <button onclick = "location.href = '/woosinCompuny2'">세무/회계 부문</button>				  
 		  <br>
 		  <br>
 				</div>
 					
-				<div class="box">
+				<div class="box" style="background-color: #D6F0FF">
 					<div class="image fit">
-						<img src="images/605.jpg" height="400px" alt="" />
+						<img src="images/902.jpg" height="400"/>
 					</div>
-
-					<!-- Lists -->
 					
-					<div>
-					<h3 align="center">업무 흐름표</h3>
-					<div class="row">
-						
-				
-					</div>
-				</div>
-			<div class="row">		
-				<div>
-				<img src="images/101.PNG" width=670px height=800px alt="조직도" />
-				</div>
-				
-				<div>
-				<img src="images/102.PNG" width=670px height=800px alt="조직도"/>
-				</div>
-			</div>
+					<h3 align="center">글귀 필요</h3>
+					<p align="center">혁신이상의 기술을 보유한 우신건설 홈페이지를 찾아주신 고객여러분 진심으로 환영합니다. </p>
+					<p align="center">믿음과 신뢰성을 가지고 아름다운 건물을 짓겠다는 신념을 가지고 전 직원이 한마음으로  공사품질관리,</p>
+					<p align="center">원가절감,부실방지로 절감된 비용을 고객에게 돌려주는 것을 원칙으로 하는 회사입니다.</p>
+					<hr />
+					
+					<!-- Lists -->
+					<h3 align="center">세무회계 부문</h3>
+					<p align="center">각종 세무 상담 | 기업진단 자문 | 회계감사 자문 | 각종 세무신고 및 | 세무조정 자문등 </p>
+					<br>
 					
 		</div>
 	</div>
