--- a/woosin/src/main/resources/templates/woosinIntroduce.html
+++ b/woosin/src/main/resources/templates/woosinIntroduce.html
@@ -39,6 +39,9 @@
       font-family: "Nanum Gothic", sans-serif;
       font-size: 22px;
 }
+p{
+	    color: black;
+}
 button{
   background:#1AAB8A;
   color:#fff;
@@ -88,16 +91,17 @@ button:hover:before,button:hover:after{
 		</header>
 
 	<!-- Nav -->
-		<nav id="menu">
-			<ul class="links">
-				<li><a href="index">Home</a></li>
-				<li><a href="woosinIntroduce">회사소개</a></li>
-				<li><a href="registrationWoosin">인증/보유</a></li>
-				<li><a href="coperrationWoosin">주요사업내용/실적</a></li>
-				<li><a href="elements.html">주요실적</a></li>
-				<li><a href="elements.html">커뮤니티</a></li>
-			</ul>
-		</nav>
+			<nav id="menu">
+				<ul class="links">
+					<li><a href="index">Home</a></li>
+					<li><a href="woosinIntroduce">회사소개</a></li>
+					<li><a href="woosinCompuny">주요사업 내용</a></li>
+					<li><a href="coperrationWoosin">주요실적</a></li>
+					<li><a href="elements.html">공사이미지</a></li>
+					<li><a href="registrationWoosin">인증/보유</a></li>
+					<li><a href="Community">커뮤니티</a></li>
+				</ul>
+			</nav>
 	
 		<!-- Two -->
 			<section id="two" class="wrapper style3">
@@ -154,7 +158,7 @@ button:hover:before,button:hover:after{
 				  <br>	
 				</div>
 					
-				<div class="box">
+				<div class="box" style="background-color: #B2CCFF">
 					<div class="image fit">
 						<img src="images/604.jpg" height="400px" />
 					</div>
@@ -174,65 +178,18 @@ button:hover:before,button:hover:after{
 					<hr />
 					<!-- Lists -->
 					
-					<div>
-					<h3 align="center">회사소개</h3>
-					<div class="row">
+					
+					<h3 align="center">회사개요</h3>
+					<div class="content" align="center">
 						<div class="6u 12u$(small)" align="center">
-
-							<h4  align="center">회사개요</h4>
-							<ul>
-								<li>상호: 주식회사 우신종합건설 [대표이사: 유광열]</li>
-								<li>사업자 등록번호: 246-81-00380   법인등록번호 164611-0010007</li>
-								<li>연락처: Tel. 032) 549-2207/2208   Fax 032) 549-2209</li>
-								<li>소재지: 인천광역시 계양구 계양대로 138 4층(작전동)</li>
-								<li>보유면허: 건축공사업	04-0827</li>
-								
-							</ul>
+							<p align="center">상호: 주식회사 우신종합건설 [대표이사: 유광열]</p>
+							<p align="center">사업자 등록번호: 246-81-00380   법인등록번호 164611-0010007</p>
+							<p align="center">연락처: Tel. 032) 549-2207/2208   Fax 032) 549-2209</p>
+							<p align="center">소재지: 인천광역시 계양구 계양대로 138 4층(작전동)</p>
+							<p align="center">보유면허: 건축공사업	04-0827</p>
 						 </div>
-											
-					<div class="table-wrapper">
-					<h4 align="center">주요 사업 내용</h4>
-						<table class="alt">
-							<thead>
-								<tr>
-									<th align="center">건설부문</th>
-									<th align="center">컨설팅 부문, 제조/건설 컨설팅</th>
-									<th align="center">세무회계 부문</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>
-									공장건축물(VE전문)<br>
-									공동주택<br>
-									학교공사<br>
-									근린생활시설<br>
-									문화 및 종교시설등
-									</td>
-									<td>
-									경영혁신/정보개선<br>
-									SCM set System<br>
-									DP/DF/G-ERP개선<br>
-									기준정보/원가절감<br>
-									구조개선/KPI 관리
-									</td>
-									
-									<td>
-									각종 세무 상담<br>
-									기업진단 자문<br>
-									회계감사 자문<br>
-									각종 세무신고 및<br>
-									세무조정 자문등
-									</td>
-									
-								</tr>
-											
-								</tbody>
-							</table>
-							
-						</div>
 					</div>
-				</div>
+				
 			<hr />	
 					
 		</div>
