--- a/woosin/src/main/resources/templates/woosinIntroduce3.html
+++ b/woosin/src/main/resources/templates/woosinIntroduce3.html
@@ -88,16 +88,17 @@ button:hover:before,button:hover:after{
 		</header>
 
 	<!-- Nav -->
-		<nav id="menu">
-			<ul class="links">
-				<li><a href="index">Home</a></li>
-				<li><a href="woosinIntroduce">회사소개</a></li>
-				<li><a href="registrationWoosin">인증/보유</a></li>
-				<li><a href="coperrationWoosin">주요사업내용/실적</a></li>
-				<li><a href="elements.html">주요실적</a></li>
-				<li><a href="elements.html">커뮤니티</a></li>
-			</ul>
-		</nav>
+			<nav id="menu">
+				<ul class="links">
+					<li><a href="index">Home</a></li>
+					<li><a href="woosinIntroduce">회사소개</a></li>
+					<li><a href="woosinCompuny">주요사업 내용</a></li>
+					<li><a href="coperrationWoosin">주요실적</a></li>
+					<li><a href="elements.html">공사이미지</a></li>
+					<li><a href="registrationWoosin">인증/보유</a></li>
+					<li><a href="Community">커뮤니티</a></li>
+				</ul>
+			</nav>
 	
 		<!-- Two -->
 			<section id="two" class="wrapper style3">
@@ -154,7 +155,7 @@ button:hover:before,button:hover:after{
 		  <br>
 				</div>
 					
-				<div class="box">
+				<div class="box" style="background-color: #CDC7AE">
 					<div class="image fit">
 						<img src="images/601.jpg" height="400px" alt="" />
 					</div>
@@ -169,7 +170,7 @@ button:hover:before,button:hover:after{
 					</div>
 				</div>
 				<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a343f0d2fda2b44b118d8300b55887de"></script>
-				<div id="map" style="width:100%;height:400px;">dd</div>
+				<div id="map" style="width:100%;height:600px;">dd</div>
 				<h3>주소 : 인천광역시 계양구 계양대로 138 4층(작전동)</h3>	
 				<h3>Tel : 032) 549-2207/2208</h3>
 		</div>
