<woosin> 공지사항 기능추가, 1:1문의 기능추가 , 상담실 form 생성후 기능확인 완료
0. 카테고리 제배치
1. 어드민에서 입력하여 받아준 리스트를 출력 하여준다
2. 고객쪽에서 문의를 할수있는 폼생성
3. 상담실 고객문의 제목과 번호만 따로보여주는 폼생성
4. 어드민에서 카테고리 리스트 출력기능 확인

--- a/woosin/src/main/resources/templates/Community.html
+++ b/woosin/src/main/resources/templates/Community.html
@@ -171,7 +171,7 @@ button:hover:before,button:hover:after{
 								<hr />
 								<form action="/addCommunity" method="post">
 									<div class="field half first">
-										<label for="name">성함</label>
+										<label for="name">닉네임</label>
 										<input name="name" id="name" type="text" placeholder="Name">
 									</div>
 									<div class="field half">
@@ -180,7 +180,7 @@ button:hover:before,button:hover:after{
 									</div>
 									<div class="field">
 										<label for="dept">제목</label>
-										<input name="dept" id="dept" type="text" placeholder="dept">
+										<input name="dept" id="dept" type="text" placeholder="Title">
 									</div>
 									<div class="field">
 										<label for="message">내용</label>
