--- a/woosin/src/main/resources/templates/coperrationWoosin.html
+++ b/woosin/src/main/resources/templates/coperrationWoosin.html
@@ -44,6 +44,7 @@ font-weight: bold ;
       font-family: "Nanum Gothic", sans-serif;
       font-size: 22px;
 }
+
 button{
   background:#1AAB8A;
   color:#fff;
@@ -80,6 +81,7 @@ button:hover:before,button:hover:after{
   width:100%;
   transition:800ms ease all;
 }
+
 </style>
 	<body class="subpage">
 	
@@ -177,17 +179,17 @@ button:hover:before,button:hover:after{
 						  </tr>
 						  
 							  <tr th:each="str:${map.list}">
-							    <td th:text="${str.corperrationNo}" style="color: black;">corperrationNo</td>
-							    <td th:text="${str.corperrationPlace}" style="color: black;">corperrationPlace</td>
-							    <td th:text="${str.corperrationName}" style="color: black;">corperrationName</td>
-							    <td th:text="${str.corperrationDate}" style="color: black;">corperrationDate</td>
-							    <td th:text="${str.corperrationPrice}" style="color: black;">corperrationPrice</td>
+							    <td th:text="${str.corperrationNo}" style="color: #2E2E2E;">corperrationNo</td>
+							    <td th:text="${str.corperrationPlace}" style="color: #2E2E2E;">corperrationPlace</td>
+							    <td th:text="${str.corperrationName}" style="color: #2E2E2E;">corperrationName</td>
+							    <td th:text="${str.corperrationDate}" style="color: #2E2E2E;">corperrationDate</td>
+							    <td th:text="${str.corperrationPrice}" style="color: #2E2E2E;">corperrationPrice</td>
 							  </tr>
 						  
 						</table>
 				    </div>
-				    <a th:if="${map.currentPage > 1}" th:href="@{/coperrationWoosin?(currentPage=${map.currentPage-1})}">이전</a>
-				    <a th:if="${map.currentPage < map.lastPage}" th:href="@{/coperrationWoosin?(currentPage=${map.currentPage+1})}">다음</a>
+				    <a class="button" th:if="${map.currentPage > 1}" th:href="@{/coperrationWoosin?(currentPage=${map.currentPage-1})}">이전</a>
+				    <a class="button" th:if="${map.currentPage < map.lastPage}" th:href="@{/coperrationWoosin?(currentPage=${map.currentPage+1})}">다음</a>
 					</div>
 			</div>
 	</section>
