--- a/woosin/src/main/resources/templates/woosinIntroduce3.html
+++ b/woosin/src/main/resources/templates/woosinIntroduce3.html
@@ -35,7 +35,7 @@
   background-color: #ddd;
   color: black;
 }
- p,h3,li,a{
+ p,h3,li,a,i{
       font-family: "Nanum Gothic", sans-serif;
       font-size: 22px;
 }
@@ -163,16 +163,19 @@ button:hover:before,button:hover:after{
 					<!-- Lists -->
 					
 					<div>
-					<h3 align="center">오시는길</h3>
+					<h3 align="center" style="font-size: 50px;">오시는길</h3>
 					<div class="row">
 						
 				
 					</div>
 				</div>
 				<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a343f0d2fda2b44b118d8300b55887de"></script>
-				<div id="map" style="width:100%;height:600px;">dd</div>
-				<h3>주소 : 인천광역시 계양구 계양대로 138 4층(작전동)</h3>	
-				<h3>Tel : 032) 549-2207/2208</h3>
+				<div id="map" style="width:100%;height:600px;"></div>
+				<p style="color: black;"><i class="fa fa-map-marker"></i>  주소 : 인천광역시 계양구 계양대로 138 4층(작전동)</p>
+				<p style="color: black;"><i class="fa fa-envelope-o"></i>  (주)우신종합건설 : kuooe@naver.com </p>
+				<p style="color: black;"><i class="fa fa-phone"></i>  Tel : 032) 549-2207/2208 | Fax : 032) 549-2209 </p>
+				<p style="color: black;"><i class="fa fa-internet-explorer"></i>  http://www.우신종합건설.com </p>
+				
 		</div>
 	</div>
 </section>
